fix modal alignment for mobile and desktop

--- a/output.css
+++ b/output.css
@@ -1673,6 +1673,18 @@ html {
   max-height: 60vh;
 }
 
+.max-h-full {
+  max-height: 100%;
+}
+
+.max-h-\[80dvh\] {
+  max-height: 80dvh;
+}
+
+.max-h-\[60dvh\] {
+  max-height: 60dvh;
+}
+
 .w-20 {
   width: 5rem;
 }
@@ -1703,6 +1715,14 @@ html {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[90dvh\] {
+  width: 90dvh;
+}
+
+.w-\[100dvh\] {
+  width: 100dvh;
 }
 
 .cursor-pointer {
@@ -1854,6 +1874,21 @@ html {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 224 71 / var(--tw-bg-opacity));
 }
 
 .object-contain {
